# skidbot-robot

skidbot_controller/: CMakeLists.txt  package.xml
skidbot_controller/config/: skidbot_controller.yaml
skidbot_controller/launch/: controller.launch.py
skidbot_description/: CMakeLists.txt  package.xml  setup.cfg  setup.py
skidbot_description/config/: skidbot.rviz
skidbot_description/launch/: skidbot_description.launch.py
skidbot_description/urdf/: skidbot.gazebo  skidbot.xacro  skidbot_ros2_control.xacro
skidbot_gazebo/: CMakeLists.txt  package.xml  setup.cfg  setup.py
skidbot_localization/: CMakeLists.txt  package.xml
skidbot_navigation/: CMakeLists.txt  package.xml
skidbot_navigation/behavior_tree/: simple_nav_astar.xml  simple_nav_hybrid_astar.xml  simple_nav_w_replanning.xml  simple_nav_w_replanning_astar.xml  simple_nav_w_replanning_hybrid_astar.xml
skidbot_navigation/config/: behavior_server.yaml  bt_navigator.yaml  controller.yaml  planner_astar.yaml  planner_hybrid_astar.yaml  planner_server.yaml  smoother.yaml
skidbot_navigation/launch/: nav2.launch.py  navigation.launch.py
skidbot_navigation/planner_results/: plan_paths.csv  planner_results.csv  robot_trajectories.csv
skidbot_navigation/rviz/: nav2.rviz
skidbot_navigation/scripts/: planner_benchmark.py
skidbot_navigation/skidbot_navigation/: gps_waypoint_logger.py  interactive_waypoint_follower.py  logged_waypoint_follower.py  planner_benchmark_recorder.py  planner_path_recorder.py  twist_to_twist_stamped.py
skidbot_navigation/waypoints/: gps_waypoints_open_world.yaml
(+21 files in other folders)
